--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
     }
     </style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YM9HZT6DXR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YM9HZT6DXR');
+</script>
 <body class="bg-slate-50 text-slate-900">
 
     <!-- Navigation -->
